--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,8 @@
     "node-editor": "link:..",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.6.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^1.1.4"
