🤖 Example React dependencies are now linked from the parent node_modules

--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "nanoid": "^2.1.11",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-portal": "^4.2.1"
   }
 }
