--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "core-js": "^3.6.5",
     "cross-env": "^5.1.4",
     "eslint": "6.x",
     "eslint-config-react-app": "^5.2.0",
