--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,20 @@ node_js:
   - 10
   - 9
   - 8
+addons:
+  apt:
+    packages:
+      # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
+      - libgconf-2-4
+cache:
+  # Caches $HOME/.npm when npm ci is default script command
+  # Caches node_modules in all other cases
+  npm: true
+  yarn: true
+  directories:
+    # we also need to cache folder with Cypress binary
+    - ~/.cache
+install:
+  - yarn install
+script:
+  - $(npm bin)/cypress run --record
