--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "dist"
   ],
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@reach/auto-id": "^0.10.5",
     "d3-shape": "^1.3.7",
     "lodash": "^4.17.15",
