--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "2.x",
     "babel-core": "^6.26.3",
     "babel-eslint": "10.x",
+    "babel-plugin-emotion": "^10.0.33",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -72,6 +73,7 @@
   ],
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "@reach/auto-id": "^0.10.5",
     "d3-shape": "^1.3.7",
     "lodash": "^4.17.15",
