--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 node_modules
 
 # builds
-build
-dist
+#build
+#dist
 .rpt2_cache
 
 # misc
@@ -25,3 +25,4 @@ example/.docz/.cache
 # Local Netlify folder
 .netlify
 .docz
+.idea
