--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   ],
   "dependencies": {
     "@reach/auto-id": "^0.10.5",
+    "classnames": "^2.2.6",
     "d3-shape": "^1.3.7",
     "lodash": "^4.17.15",
     "nanoid": "^2.1.11",
