--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.11.2",
     "axios": "^0.19.2",
     "decode-query-string": "^0.1.2",
     "docz": "^2.3.1",
