--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^1.4.0",
+    "wait-on": "^5.2.1"
   },
   "files": [
     "dist"
