--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "rollup -c -w",
     "prepare": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "release": "npx np",
+    "postversion": "cp -f package.json dist"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -55,6 +56,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
     "jest-puppeteer": "^4.4.0",
+    "np": "^7.2.0",
     "postcss-nested": "^4.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
