--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flume",
-  "version": "0.6.2",
+  "version": "0.6.3-0",
   "description": "A node editor for React",
   "author": "chrisjpatty",
   "license": "MIT",
