--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
@@ -59,6 +58,8 @@
     "jest-puppeteer": "^4.4.0",
     "np": "^7.2.0",
     "postcss-nested": "^4.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "^1.1.4",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
