--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
-    "wait-on": "^5.2.1"
+    "wait-on": "^5.2.1",
+    "y18n": "^5.0.8"
   },
   "files": [
     "dist"
