--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,5 @@
 {
   "name": "node-editor-example",
-  "homepage": "https://chrisjpatty.github.io/node-editor",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
@@ -19,7 +18,7 @@
     "react-dom": "link:../node_modules/react-dom",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +28,17 @@
     "docz:dev": "DOCZ_SOURCE=./src docz dev",
     "docz:build": "DOCZ_SOURCE=./src docz build",
     "docz:serve": "DOCZ_SOURCE=./src docz build && docz serve"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
