⬆️ Upgrades example react scripts (#150)
* 🐛 Upgrades example react scripts

* Fixed eslint conflict between package and example

--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.4",
     "cypress": "^4.9.0",
-    "eslint": "6.x",
-    "eslint-config-react-app": "^5.2.0",
+    "eslint": "7",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-flowtype": "3.x",
