--- a/package.json
+++ b/package.json
@@ -29,15 +29,25 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-external-helpers": "^7.16.7",
     "@babel/plugin-syntax-async-generators": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@svgr/rollup": "^2.4.1",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/react": "^10.4.3",
+    "@types/react": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
-    "babel-core": "^6.26.3",
     "babel-eslint": "10.x",
-    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -61,13 +71,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup": "^2.70.2",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.3",
     "wait-on": "^5.2.1",
     "y18n": "^5.0.8"
   },
@@ -78,7 +87,7 @@
     "@reach/auto-id": "^0.10.5",
     "d3-shape": "^1.3.7",
     "lodash": "^4.17.15",
-    "nanoid": "^3.1.30",
+    "nanoid": "^3.3.2",
     "react-portal": "^4.2.1"
   },
   "jest": {
