--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "d3-shape": "^1.3.7",
     "lodash": "^4.17.15",
     "nanoid": "^3.3.2",
-    "react-portal": "^4.2.1"
+    "react-portal": "^4.2.1",
+    "rollup-plugin-typescript2": "^0.31.2"
   },
   "jest": {
     "transformIgnorePatterns": [
