--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,16 @@
     "lib": ["dom", "esnext"],
     "jsx": "react",
     "declaration": true,
+    "declarationDir": ".",
     "moduleResolution": "node",
     "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
   },
+  "exclude": ["dist"],
   "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
