--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@svgr/rollup": "^2.4.1",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/react": "^10.4.3",
+    "@types/d3-shape": "^3.0.2",
     "@types/react": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
