--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "1.x",
     "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-tsdoc": "^0.2.16",
     "gh-pages": "^1.2.0",
     "jest-puppeteer": "^4.4.0",
     "np": "^7.2.0",
