--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flume",
-  "version": "0.8.0",
+  "version": "1.0.0-0",
   "description": "A node editor for React",
   "author": "chrisjpatty",
   "license": "MIT",
