--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,7 @@
     "react-dom": "link:../node_modules/react-dom",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
