Fixed types for control builders

--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "@svgr/rollup": "^2.4.1",
     "@testing-library/dom": "^7.20.0",
+    "@testing-library/react": "^14.0.0",
     "@types/d3-shape": "^3.0.2",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.5",
     "@types/react-portal": "^4.0.4",
-    "@testing-library/react": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
@@ -64,7 +64,7 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "1.x",
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-tsdoc": "^0.2.16",
