--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "axios": "^0.19.2",
     "decode-query-string": "^0.1.2",
     "docz": "^2.3.1",
@@ -17,8 +21,9 @@
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "5.3.3",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,6 +33,12 @@
     "docz:dev": "DOCZ_SOURCE=./src docz dev",
     "docz:build": "DOCZ_SOURCE=./src docz build",
     "docz:serve": "DOCZ_SOURCE=./src docz build && docz serve"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -40,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
