--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "release": "npx np"
+    "release": "changeset publish"
   },
   "np": {
     "testScript": "test"
@@ -36,6 +36,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@changesets/cli": "^2.28.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -70,7 +71,6 @@
     "eslint-plugin-tsdoc": "^0.2.16",
     "gh-pages": "^1.2.0",
     "jest-puppeteer": "^4.4.0",
-    "np": "^7.2.0",
     "postcss-nested": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
