Add TypeScript definitions for core components and utilities
- Introduced FlumeCache class for managing ports and connections.
- Added commentsReducer and nodesReducer with action types and action definitions.
- Implemented connectionCalculator for handling port and connection calculations.
- Updated TypeScript configuration for stricter type checking.
- Enhanced utility functions for node and connection management.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,26 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": false,
+    "useUnknownInCatchVariables": false,
+    "alwaysStrict": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "exactOptionalPropertyTypes": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": false,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": false,
+    "allowUnusedLabels": true,
+    "allowUnreachableCode": true
   },
   "exclude": ["dist"],
   "include": ["./src/**/*.ts", "./src/**/*.tsx", "src/*.d.ts"]
