Enhance ESLint configuration and refactor reducers for improved code quality
- Added 'react-hooks/exhaustive-deps' rule to ESLint configuration for better dependency management in React hooks.
- Updated package.json to include 'eslint-config-react-app' for standardized linting.
- Refactored nodesReducer, stageReducer, toastsReducer, and ColorPicker component to use named exports for consistency.
- Improved usePrevious hook by correcting dependency array to track value changes accurately.
- Cleaned up formatting in ssr.test.js for better readability.

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   },
   "plugins": ["eslint-plugin-tsdoc"],
   "rules": {
-    "tsdoc/syntax": "warn"
+    "tsdoc/syntax": "warn",
+    "react-hooks/exhaustive-deps": "error"
   }
 }
